Add Minecraft Legends Page and fix footer

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -10,6 +10,8 @@
   --color-mc-grey-300: #aba09c;
   --color-mc-grey-400: #6b6562;
   --color-mc-grey-600: #262423;
+  --color-mc-lightBlue-100: #acf2ff;
+  --color-mc-lightBlue-600: #339cd7;
 }
 
 * {
