--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -3,8 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: black;
-  padding: 2rem 0rem;
+  background-color: #171615;
   width: 100%;
   &__companies {
     display: flex;
@@ -17,5 +16,89 @@
   &__copyright {
     margin-top: 2rem;
     color: white;
+  }
+}
+
+.follow-minecraft {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: black;
+  padding: 2rem 0rem;
+  &__title {
+    color: white;
+  }
+  &__socials {
+    display: flex;
+    width: 20%;
+    justify-content: space-evenly;
+    &__img {
+      margin: 1rem 0rem;
+      padding: 0.5rem;
+      background-color: #171615;
+      height: 2.75rem;
+      border-radius: 5rem;
+      cursor: pointer;
+    }
+  }
+}
+
+.youtube:hover {
+  background-color: #ff0000;
+}
+
+.instagram:hover {
+  background-color: #da56a0;
+}
+.facebook:hover {
+  background-color: #4267b2;
+}
+.twitter:hover {
+  background-color: #1dcaff;
+}
+.reddit:hover {
+  background-color: #ff5700;
+}
+
+.copyright {
+  margin-top: 2rem;
+  padding: 2rem 0rem;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: #313131;
+  color: white;
+  font-weight: 400;
+  font-size: 0.75rem;
+  &__language {
+    display: flex;
+    align-items: center;
+    &__globe {
+      height: 1.5rem;
+    }
+  }
+  &__links {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    &__link {
+      margin-right: 1rem;
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+      }
+      &:last-child {
+        margin-right: 0rem;
+      }
+    }
+  }
+  &__microsoft {
+    display: flex;
+    &__img {
+      height: 1.5rem;
+    }
   }
 }
